--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,13 @@
     -->
     <title>React App</title>
   </head>
+
+  <style>
+    body {
+      background-color: rgb(10, 10, 10);
+    }
+  </style>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
